# github-tags-finder

./: .gitignore  README.md  pyproject.toml
docs/mcp/: codex.md  mcp.md
src/github_tags_finder/: __init__.py  cli.py  client.py  environment.py  mcp_server.py  output.py  query.py
tests/: test_cli.py  test_client.py  test_environment.py  test_mcp_server.py  test_query.py
