[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-tags-finder"
version = "0.1.0"
description = "Find approachable GitHub issues by language, label, and search qualifier."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.27,<2"]

[project.scripts]
github-tags = "github_tags_finder.cli:main"
github-tags-mcp = "github_tags_finder.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_tags_finder"]
